src/objects/Time_Entry__c.object
<CustomObject>
    <description>https://help.getharvest.com/api-v2/timesheets-api/timesheets/time-entries/</description>
    <fields>
        <fullName>Billable_Amount__c</fullName>
        <formula>IF(Billable__c, Billable_Rate__c * Hours__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Time Entry is Billable, multiplies Billable Rate by Hours</inlineHelpText>
        <label>Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Rate__c</fullName>
        <description>The billable rate for the time entry. This will be set for every Time Entry record and will be set according to the Project - Bill By field. 
If value = Project, use Project__c.Project_Hourly_Rate__c value
if value = Tasks, use Project_Task_Assignment__c.Hourly_Rate__c
if value = People, use Project_User_Assignment__c.Hourly_Rate__c</description>
        <label>Billable Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the time entry is billable. This will be checked for the Time Entry record if Project__c.Bill_By__c = Project or People and Project__c.Is_Billable__c = true OR if Project__c.Bill_By__c = Task and Project_Task_Assignment__c.Is_Billable__c = true</description>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the time entry counts towards the project budget.</description>
        <label>Budgeted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Project_User_Assignment__r.Project__r.Client__r.Name</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <description>The cost rate for the time entry.</description>
        <label>Cost Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ended_Time__c</fullName>
        <description>Time the time entry was ended (if tracking by start/end times).</description>
        <label>Ended Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Number of (decimal time) hours tracked in this time entry.</description>
        <label>Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Unique ID for the time entry - this is technically a string instead of an integer in SF but can easily be converted to an integer when passing into the Harvest API - another way to handle an Id field is to create a Number field and have a before trigger populate it - that seems a little more complicated since we have to ensure the integer is unique</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Is_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the time entry has been marked as invoiced.</description>
        <label>Is Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the time entry has been approved via Timesheet Approval.</description>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the time entry has been locked.</description>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the time entry is currently running.</description>
        <label>Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked_Reason__c</fullName>
        <description>Why the time entry has been locked.</description>
        <label>Locked Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes attached to the time entry</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>CASESAFEID(Project_User_Assignment__r.Project__c)</formula>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Task_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task Assignment</label>
        <referenceTo>Project_Task_Assignment__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <formula>Project_Task_Assignment__r.Project_Task__r.Name</formula>
        <label>Project Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_User_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project User Assignment</label>
        <referenceTo>Project_User_Assignment__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Project_User_Assignment__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spent_Date__c</fullName>
        <description>Date of the time entry.</description>
        <label>Spent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Started_Time__c</fullName>
        <description>Time the time entry was started (if tracking by start/end times).</description>
        <label>Started Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Timer_Started_At__c</fullName>
        <description>Date and time the timer was started (if tracking by duration).</description>
        <label>Timer Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <formula>CASESAFEID(Project_User_Assignment__r.User__c)</formula>
        <label>User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>The Time Entry User is pulled from the Owner of the Weekly Timesheet</description>
        <formula>Weekly_Time_Sheet__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Weekly_Time_Sheet__r.Owner:User.LastName</formula>
        <label>User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Time_Sheet__c</fullName>
        <label>Weekly Time Sheet</label>
        <referenceTo>Weekly_Time_Sheet__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>Time Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>